--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "docs:json": "compodoc -p ./tsconfig.json -e json -d .",
+    "storybook": "npm run docs:json && start-storybook -p 6006",
+    "build-storybook": "npm run docs:json && build-storybook"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.0.0",
+    "@angular/cdk": "^12.2.5",
     "@angular/common": "~12.0.0",
     "@angular/compiler": "~12.0.0",
     "@angular/core": "~12.0.0",
     "@angular/forms": "~12.0.0",
+    "@angular/material": "^12.2.5",
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
@@ -26,8 +31,19 @@
     "@angular-devkit/build-angular": "~12.0.0",
     "@angular/cli": "~12.0.0",
     "@angular/compiler-cli": "~12.0.0",
+    "@angular/elements": "^12.2.5",
+    "@babel/core": "^7.15.5",
+    "@compodoc/compodoc": "^1.1.14",
+    "@storybook/addon-actions": "^6.4.0-alpha.34",
+    "@storybook/addon-essentials": "^6.4.0-alpha.34",
+    "@storybook/addon-links": "^6.4.0-alpha.34",
+    "@storybook/angular": "^6.4.0-alpha.34",
+    "@storybook/builder-webpack5": "^6.4.0-alpha.34",
+    "@storybook/manager-webpack5": "^6.4.0-alpha.34",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@webcomponents/custom-elements": "^1.5.0",
+    "babel-loader": "^8.2.2",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
