--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
+    "angular-responsive-carousel": "^2.1.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
@@ -37,6 +38,7 @@
     "@storybook/addon-actions": "^6.4.0-alpha.34",
     "@storybook/addon-essentials": "^6.4.0-alpha.34",
     "@storybook/addon-links": "^6.4.0-alpha.34",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/angular": "^6.4.0-alpha.34",
     "@storybook/builder-webpack5": "^6.4.0-alpha.34",
     "@storybook/manager-webpack5": "^6.4.0-alpha.34",
